cduce/tests/full/bad/no_url_loader.t/run.t
  $ cduce --verbose --compile no_url_loader.cd
  $ cduce --no curl --no netclient --run  no_url_loader.cdo
  Uncaught CDuce exception: "Error \"https://www.cduce.org\": \n cduce compiled without support for external URL loading"
  [1]
